--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
                 dir('./project1') {
                     sh 'echo $CATALINA_HOME'
                     sh 'cp target/*.war $CATALINA_HOME/webapps/'
-                    sh 'cp -r target/reimbursementapi $CATALINA_HOME/webapps/'
+                    sh 'cp -r target/project1 $CATALINA_HOME/webapps/'
                 }
             }
         }
